# mcp-azure-devops

./: CLAUDE.md  README.md  pyproject.toml  server.py
.cursor/rules/: azure-devops-mcp.mdc
.github/: copilot-instructions.md
tests/: test_server.py
