[project]
name = "azure-devops-mcp"
version = "0.1.0"
description = "MCP server for creating and managing Azure DevOps projects and work items"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-devops>=7.1.0b4",
    "fastmcp>=3.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
